Minimum update like color, padding, margin in some section

--- a/index.html
+++ b/index.html
@@ -388,24 +388,38 @@
                     <div class="sec-menu-about">
                         <p class="bold">About</p>
                         <ul>
-                            <a href="#"><li>Features</li></a>
-                            <a href="#"><li>Pricing</li></a>
-                            <a href="#"><li>Articles</li></a>
-                            <a href="#"><li>Resources</li></a>
+                            <li>
+                                <a href="#">Features</a>
+                            </li>
+                            <li>
+                                <a href="#">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#">Articles</a>
+                            </li>
+                            <li>
+                                <a href="#">Resources</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="sec-menu-support">
                         <p class="bold">Support</p>
                         <ul>
-                            <a href="#"><li>Contact Us</li></a>
+                            <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
                     <div class="sec-menu-policies">
                         <p class="bold">Policies</p>
                         <ul>
-                            <a href="#"><li>Terms of Use</li></a>
-                            <a href="#"><li>Privacy Policy</li></a>
-                            <a href="#"><li>Terms of Refund and Cancellation Policy</li></a>
+                            <li>
+                                <a href="#">Terms of Use</a>
+                            </li>
+                            <li>
+                                <a href="#">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#">Terms of Refund and Cancellation Policy</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
